Stop hip-hop/rap word wrap

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2332,13 +2332,30 @@ a {
             font-weight: bolder;
         }
 
-        
-        .genres {
+        .genres-container {
             background-color: #41A0BD;
-            width: 100%;
-            display: flex;
-            justify-content: center;
+
+            .genres {
+                max-width: 80%;
+                display: flex;
+                justify-content: center;
+                margin: 0 auto;
+                position: relative;
+                white-space: nowrap;
+            }
+
+            
         }
+
+        // .genres:before {
+        //     content:'';
+        //     width:100%;
+        //     height:100%;    
+        //     position:absolute;
+        //     left:0;
+        //     top:0;
+        //     background: linear-gradient(transparent 150px, white);
+        // }
         
         .bar-two {
             background-color: #4390A8;
@@ -2376,7 +2393,7 @@ a {
                 border-radius: 50px 50px 50px 50px;
                 padding: 5px;
                 padding: 5px 10px;
-                margin: 8px;
+                margin: 4px;
                 cursor: pointer;
                 color: white;
                 font-size: 14px;
